--- a/preamble.tex
+++ b/preamble.tex
@@ -61,6 +61,8 @@
 \usepackage[space]{grffile}
 \usepackage{booktabs}
 
+\usepackage{adjustbox} % for \adjincludegraphics
+
 % These are my colors -- there are many like them, but these ones are mine.
 \definecolor{blue}{RGB}{0,114,178}
 \definecolor{red}{RGB}{213,94,0}
